--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,3 @@
-project(wt-example LANGUAGES CXX)
-
-SET(CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE true)
+PROJECT(wt-example LANGUAGES CXX)
 add_subdirectory(wt)
-
-#SET(CMAKE_MODULE_PATH
-#  ${CMAKE_MODULE_PATH}
-#  ${WT_SOURCE_DIR}
-#  ${WT_SOURCE_DIR}/cmake
-#)
 add_subdirectory(src)
