--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,4 +6,4 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/wt/src
 ADD_EXECUTABLE(hello.wt hello.C)
 TARGET_LINK_LIBRARIES(hello.wt wt wthttp)
 
-install(TARGETS hello.wt RUNTIME DESTINATION bin)
+install(TARGETS hello.wt DESTINATION bin)
